[gd_scene load_steps=21 format=3 uid="uid://dvlsatotrd1o"]

[ext_resource type="Script" uid="uid://c40hkpcwa6wxb" path="res://scenes/objects/chest/chest_trade.gd" id="1_pjhtm"]
[ext_resource type="Texture2D" uid="uid://rlj24oit8kga" path="res://art/game/tilesets/Building parts/Chest.png" id="2_4rnbc"]
[ext_resource type="PackedScene" uid="uid://r8qjck4vbhg2" path="res://scenes/component/interactable_component.tscn" id="3_vlel7"]
[ext_resource type="PackedScene" uid="uid://bhkwcprhia6sl" path="res://scenes/component/interactable_label_component.tscn" id="4_lo2qg"]
[ext_resource type="PackedScene" uid="uid://bjfu24rpo4i2j" path="res://scenes/component/feed_component.tscn" id="5_ro1j3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umtkn"]
size = Vector2(16, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_44sq4"]
atlas = ExtResource("2_4rnbc")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrpii"]
atlas = ExtResource("2_4rnbc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_osdbi"]
atlas = ExtResource("2_4rnbc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_23oep"]
atlas = ExtResource("2_4rnbc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cugcg"]
atlas = ExtResource("2_4rnbc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmxm4"]
atlas = ExtResource("2_4rnbc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pawo"]
atlas = ExtResource("2_4rnbc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqprm"]
atlas = ExtResource("2_4rnbc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_umtkn"]
atlas = ExtResource("2_4rnbc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayji6"]
atlas = ExtResource("2_4rnbc")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmcsr"]
atlas = ExtResource("2_4rnbc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_44sq4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44sq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrpii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osdbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23oep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cugcg")
}],
"loop": false,
"name": &"chest_close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmxm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pawo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqprm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umtkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayji6")
}],
"loop": false,
"name": &"chest_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmcsr")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ouyk"]
radius = 17.0294

[sub_resource type="CircleShape2D" id="CircleShape2D_ayji6"]

[node name="ChestTrade" type="StaticBody2D"]
script = ExtResource("1_pjhtm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_umtkn")
debug_color = Color(0.563384, 0.081425, 0.193301, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_44sq4")
autoplay = "default"

[node name="InteractableComponent" parent="." instance=ExtResource("3_vlel7")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableComponent"]
shape = SubResource("CircleShape2D_1ouyk")

[node name="InteractableLabelComponent" parent="." instance=ExtResource("4_lo2qg")]
offset_left = -26.0
offset_top = -24.0
offset_right = -8.0
offset_bottom = -6.0

[node name="Label" type="Label" parent="."]
offset_left = -25.0
offset_top = 9.0
offset_right = 29.0
offset_bottom = 32.0
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
theme_override_font_sizes/font_size = 10
text = "Trade Here"

[node name="RewardMarker" type="Marker2D" parent="."]
position = Vector2(14, 11)

[node name="FeedComponent" parent="." instance=ExtResource("5_ro1j3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeedComponent"]
shape = SubResource("CircleShape2D_ayji6")
debug_color = Color(0.542759, 0.5476, 0.412326, 0.42)
